--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.17",
+    "daisyui": "^2.51.6",
     "firebase": "^9.22.0",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
